# mot

./: .gitignore  CMakeLists.txt  README.md  xmake.lua
Examples/: CMakeLists.txt  IExample.h
Examples/GetStarted/Camera/: Camera.h  GodCamera.cpp  HelloCamera.cpp
Examples/GetStarted/CoordinateSystem/: Cube.cpp  Hello3D.cpp
Examples/GetStarted/HelloTriangle/: HelloRectangle.cpp  HelloTriangle.cpp
Examples/GetStarted/Shaders/: Shader.h  Shader_File.cpp  Shader_InOut.cpp  Shader_MoreAttributes.cpp  Shader_Uniform.cpp
Examples/GetStarted/Textures/: HelloTexture.cpp  TexturesCombined.cpp
Examples/GetStarted/Transform/: HelloTransform.cpp
Examples/Lighting/Colors/: BasicLighting.cpp  Colors.cpp  LightingMaps.cpp  Materials.cpp
Examples/Shaders/: ExampleUniformVariables.h  uvs.glsl
Examples/legacy/: math3d.h
Examples/legacy/Shaders/: ExampleTranslationTransformation.h
Examples/legacy/Triangle/: ExampleRenderTriangle.h
mot/: main.cpp  math3d.h
mot/Examples/Shaders/: Shader.h
src/: Camera.h  Shader.h  main.cpp  math3d.h
src/Examples/Point/: ExampleRenderPoint.h
src/Examples/Shaders/: ExampleShader.h  Shader.h  wvs.glsl
src/GetStarted/Camera/: GodCamera.cpp  HelloCamera.cpp
src/GetStarted/CoordinateSystem/: Cube.cpp  Hello3D.cpp
src/GetStarted/HelloTriangle/: HelloRectangle.cpp
src/GetStarted/HelloWindow/: HelloWindow.cpp
src/GetStarted/Shaders/: Shader_File.cpp  Shader_MoreAttributes.cpp  Shader_Uniform.cpp
src/GetStarted/Textures/: HelloTexture.cpp  TexturesCombined.cpp
src/GetStarted/Transform/: HelloTransform.cpp
src/Lighting/BasicLighting/: BasicLighting.cpp
src/Lighting/Colors/: Colors.cpp
src/Lighting/LightCasters/: DirectionalLight.cpp  FlashLight.cpp  PointLight.cpp
src/Lighting/LightingMaps/: LightingMaps.cpp
src/Lighting/Materials/: Materials.cpp
src/Lighting/MultipleLights/: MultipleLights.cpp
